Fix overflow

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -15,6 +15,8 @@
 }
 
 body {
+    width: 100vw;
+    height: 100vh;
     background: black;
     overflow: hidden;
 }
